JavaScript Fonction DisplayResult display SearchDefinition

--- a/termTechnique.html
+++ b/termTechnique.html
@@ -34,8 +34,8 @@
       <section id="definition">
         <button type="button" class="btn btn-secondary">← Retour</button>
         <div id="containerTermTechnique">
-          <div id="TermTechniqueWord">ZIZI</div>
-          <div id="TermTechniqueDefinition">ya le zizi et la zezette</div>
+          <div id="termTechniqueWord">ZIZI</div>
+          <div id="termTechniqueDefinition">ya le zizi et la zezette</div>
         </div>
         <button type="button" class="btn btn-outline-danger">
           Ajouter aux favoris
