--- a/termTechnique.html
+++ b/termTechnique.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Terme Technique</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,22 +23,32 @@
           />
         </a>
         <div id="headerButtons">
-          <button type="button" id="myFavButton" class="btn btn-secondary btn-lg">
+          <button
+            type="button"
+            id="myFavButton"
+            class="btn btn-secondary btn-lg"
+          >
             MES FAVORIS
           </button>
-          <button type="button" id="menuButton" class="btn btn-primary btn-lg">MENU</button>
+          <button type="button" id="menuButton" class="btn btn-light btn-lg">
+            MENU
+          </button>
         </div>
       </div>
     </header>
     <main>
       <section id="definition">
-        <button type="button" class="btn btn-secondary">← Retour</button>
+        <button type="button" id="back" class="btn btn-outline-secondary">Retour</button>
         <div id="containerTermTechnique">
-          <div id="termTechniqueWord">ZIZI</div>
-          <div id="termTechniqueDefinition">ya le zizi et la zezette</div>
+          <div id="termTechniqueWord">APACHE</div>
+          <div id="termTechniqueDefinition">
+            Apache est un serveur web open source qui permet de diffuser des
+            sites et des applications sur Internet en traitant les requêtes HTTP
+            des utilisateurs.
+          </div>
         </div>
-        <button type="button" class="btn btn-outline-danger">
-          Ajouter aux favoris
+        <button type="button" id="addFav" class="btn btn-outline-danger">
+         Ajout aux favoris ❤
         </button>
       </section>
     </main>
@@ -57,13 +67,13 @@
           <a href="#" class="nav-link px-2 text-muted">About</a>
         </li>
       </ul>
-      <p class="text-center text-muted">© 2022 Company, Inc</p>
+      <p class="text-center">© 2022 Company, Inc</p>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
+    <script type="module" src="termTechScript.js" ></script>
   </body>
 </html>
