Script js almost Done

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             <input class="radioLetter" type="radio" name="letterSelected" value="Z" />Z
           </label>      
         </div>
+        <div id="buttonAll"><button type="button" id="allButton">ALL TERMS</button></div>
           <ul id="terms-list">
           </ul>
       </section>
