--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -18,7 +24,7 @@
       <div id="containerLogoNavbar">
         <a href="index.html"
           ><img
-            src="pngtree-book-and-school-logo-vector-png-image_15302156.png"
+            src="iconeList\pngtree-book-and-school-logo-vector-png-image_15302156.png"
             alt="logoHeader"
           />
         </a>
@@ -28,17 +34,20 @@
             id="myFavButton"
             class="btn btn-secondary btn-lg"
           >
-            MES FAVORIS
+           FAVORIS 🤍
           </button>
           <button type="button" id="menuButton" class="btn btn-light btn-lg">
-            MENU
+            MENU 🏠
           </button>
         </div>
       </div>
     </header>
     <main>
       <section id="search">
-        <img src="f23640ce1850782a18c629446eb7198f.png" alt="logoMain" />
+        <img
+          src="iconeList\f23640ce1850782a18c629446eb7198f.png"
+          alt="logoMain"
+        />
         <h1>ENTREZ UN MOT TECHNIQUE</h1>
         <div id="container">
           <div id="containerLeft">
@@ -59,7 +68,7 @@
               id="searchButton"
               class="btn btn-outline-dark"
             >
-              Rechercher
+              Rechercher 🔎
             </button>
           </div>
         </div>
@@ -68,105 +77,236 @@
         <h2>FILTRE ALPHABET</h2>
         <div id="alphabetFilter">
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="A" />A
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="A"
+            />A
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="B" />B
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="B"
+            />B
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="C" />C
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="C"
+            />C
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="D" />D
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="D"
+            />D
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="E" />E
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="E"
+            />E
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="F" />F
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="F"
+            />F
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="G" />G
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="G"
+            />G
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="H" />H
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="H"
+            />H
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="I" />I
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="I"
+            />I
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="J" />J
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="J"
+            />J
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="K" />K
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="K"
+            />K
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="L" />L
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="L"
+            />L
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="M" />M
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="M"
+            />M
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="N" />N
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="N"
+            />N
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="O" />O
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="O"
+            />O
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="P" />P
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="P"
+            />P
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="Q" />Q
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="Q"
+            />Q
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="R" />R
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="R"
+            />R
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="S" />S
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="S"
+            />S
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="T" />T
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="T"
+            />T
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="U" />U
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="U"
+            />U
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="V" />V
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="V"
+            />V
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="W" />W
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="W"
+            />W
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="X" />X
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="X"
+            />X
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="Y" />Y
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="Y"
+            />Y
           </label>
           <label>
-            <input class="radioLetter" type="radio" name="letterSelected" value="Z" />Z
-          </label>      
+            <input
+              class="radioLetter"
+              type="radio"
+              name="letterSelected"
+              value="Z"
+            />Z
+          </label>
         </div>
-        <div id="buttonAll"><button type="button" id="allButton">ALL TERMS</button></div>
-          <ul id="terms-list">
-          </ul>
+        <div id="buttonAll">
+          <button type="button" id="allButton">ALL TERMS</button>
+        </div>
+        <ul id="terms-list"></ul>
       </section>
     </main>
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-muted">Home</a>
+          <a href="index.html" class="nav-link px-2 text-muted">Menu</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-muted">Features</a>
+          <a href="myFavTerm.html" class="nav-link px-2 text-muted">Mes favoris</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-muted">FAQs</a>
+          <a href="https://github.com/yanzooz" class="nav-link px-2 text-muted">Github</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-muted">About</a>
+          <a href="https://github.com/yanzooz" class="nav-link px-2 text-muted">Porfolio</a>
         </li>
       </ul>
-      <p class="text-center">© 2022 Company, Inc</p>
+      <p class="text-center">© 2024 yanzooz, Inc</p>
     </footer>
 
     <script
@@ -174,6 +314,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
     <script type="module" src="script.js"></script>
   </body>
 </html>
