--- a/termTechnique.html
+++ b/termTechnique.html
@@ -10,6 +10,12 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -18,7 +24,7 @@
       <div id="containerLogoNavbar">
         <a href="index.html"
           ><img
-            src="pngtree-book-and-school-logo-vector-png-image_15302156.png"
+            src="iconeList\pngtree-book-and-school-logo-vector-png-image_15302156.png"
             alt="logoHeader"
           />
         </a>
@@ -28,17 +34,17 @@
             id="myFavButton"
             class="btn btn-secondary btn-lg"
           >
-            MES FAVORIS
+          FAVORIS 🤍
           </button>
           <button type="button" id="menuButton" class="btn btn-light btn-lg">
-            MENU
+            MENU 🏠
           </button>
         </div>
       </div>
     </header>
     <main>
       <section id="definition">
-        <button type="button" id="back" class="btn btn-outline-secondary">Retour</button>
+        <button type="button" id="back" class="btn btn-outline-secondary"> ⬅ Retour</button>
         <div id="containerTermTechnique">
           <div id="termTechniqueWord">APACHE</div>
           <div id="termTechniqueDefinition">
@@ -48,26 +54,26 @@
           </div>
         </div>
         <button type="button" id="addFav" class="btn btn-outline-danger">
-         Ajout aux favoris ❤
+         Ajouter aux favoris ❤
         </button>
       </section>
     </main>
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-muted">Home</a>
+          <a href="index.html" class="nav-link px-2 text-muted">Menu</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-muted">Features</a>
+          <a href="myFavTerm.html" class="nav-link px-2 text-muted">Mes favoris</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-muted">FAQs</a>
+          <a href="https://github.com/yanzooz" class="nav-link px-2 text-muted">Github</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-muted">About</a>
+          <a href="https://github.com/yanzooz" class="nav-link px-2 text-muted">Porfolio</a>
         </li>
       </ul>
-      <p class="text-center">© 2022 Company, Inc</p>
+      <p class="text-center">© 2024 yanzooz, Inc</p>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
