--- a/termTechnique.html
+++ b/termTechnique.html
@@ -10,6 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="iconeList\icond.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,7 +25,7 @@
       <div id="containerLogoNavbar">
         <a href="index.html"
           ><img
-            src="iconeList\pngtree-book-and-school-logo-vector-png-image_15302156.png"
+            src="iconeList\icond.png"
             alt="logoHeader"
           />
         </a>
@@ -43,6 +44,7 @@
       </div>
     </header>
     <main>
+      <div id="titleTermTech">APACHE</div>
       <section id="definition">
         <button type="button" id="back" class="btn btn-outline-secondary"> ⬅ Retour</button>
         <div id="containerTermTechnique">
@@ -52,6 +54,7 @@
             sites et des applications sur Internet en traitant les requêtes HTTP
             des utilisateurs.
           </div>
+          <div id="imgFavoris"><img src="iconeList/favori.png" alt="favoris"></div>
         </div>
         <button type="button" id="addFav" class="btn btn-outline-danger">
          Ajouter aux favoris ❤
