--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>TECH TRACKER</title>
+    <link rel="icon" href="iconeList\icond.png" type="image/x-icon">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +25,7 @@
       <div id="containerLogoNavbar">
         <a href="index.html"
           ><img
-            src="iconeList\pngtree-book-and-school-logo-vector-png-image_15302156.png"
+            src="iconeList\icond.png"
             alt="logoHeader"
           />
         </a>
@@ -48,14 +49,14 @@
           src="iconeList\f23640ce1850782a18c629446eb7198f.png"
           alt="logoMain"
         />
-        <h1>ENTREZ UN MOT TECHNIQUE</h1>
+        <h1>Bienvenue sur TECH TRACKER</h1>
         <div id="container">
           <div id="containerLeft">
             <form class="form-inline">
               <input
                 class="form-control mr-sm-2"
                 type="search"
-                placeholder="Search"
+                placeholder="Entrez un mot.."
                 aria-label="Search"
                 id="searchUser"
               />
@@ -68,13 +69,13 @@
               id="searchButton"
               class="btn btn-outline-dark"
             >
-              Rechercher 🔎
+              RECHERCHER 🔎
             </button>
           </div>
         </div>
       </section>
       <section id="filter">
-        <h2>FILTRE ALPHABET</h2>
+        <h2>Filtrer les termes par lettre</h2>
         <div id="alphabetFilter">
           <label>
             <input
@@ -286,7 +287,7 @@
           </label>
         </div>
         <div id="buttonAll">
-          <button type="button" id="allButton">ALL TERMS</button>
+          <button type="button" id="allButton">AFFICHER TOUS</button>
         </div>
         <ul id="terms-list"></ul>
       </section>
@@ -306,7 +307,7 @@
           <a href="https://github.com/yanzooz" class="nav-link px-2 text-muted">Porfolio</a>
         </li>
       </ul>
-      <p class="text-center">© 2024 yanzooz, Inc</p>
+      <p class="text-center">© 2024 yanzooz Tech Tracker, Inc</p>
     </footer>
 
     <script
